--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
-  "name": "privacy",
+  "name": "monkeytrip",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "monkeytrip app",
+  "main": "src/index.js",
   "scripts": {
-    "dev:start": "set NODE_ENV=development && nodemon src/index.js",
-    "stag:start": "set NODE_ENV=staging && node src/index.js",
-    "prod:start": "set NODE_ENV=production && node src/index.js",
-    "clean": "rm -rf node_modules && npm install"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/manjesh-yadav/node-mongo-express-starter.git"
+    "url": "git+https://manjeshy7@bitbucket.org/swutask/monkeytrip.git"
   },
-  "author": "Mike",
+  "author": "Robin",
   "license": "ISC",
+  "bugs": {
+    "url": "https://bitbucket.org/swutask/monkeytrip/issues"
+  },
+  "homepage": "https://bitbucket.org/swutask/monkeytrip#readme",
   "dependencies": {
-    "axios": "^0.24.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "http-status": "^1.5.0",
-    "joi": "^17.5.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "helmet": "^5.0.2",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.14",
-    "mongoose-sequence": "^5.3.1",
-    "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.2.0"
+    "mysql": "^2.18.1"
   }
 }
