--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,25 @@
-#Create Enverment file and set NODE_ENV = development or production or staging 
-#if NODE_ENV not set fallback to .env file in root directory
-#.env.development
-#.env.production
-#.evn.staging
-
-
 # Port number
 PORT=3000
 
-# URL of the Mongo DB
-MONGODB_URL=mongodb://127.0.0.1:27017/node
 
 # JWT
 # JWT secret key
 JWT_SECRET=thisisasamplesecret
+JWT_EXPIRE=7d
+
+#DATABASE
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+
+#SMTP
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_ADDRESS=
+
+#APPURL
+APP_URL=
